--- a/roles/kind/files/kind-config.yaml
+++ b/roles/kind/files/kind-config.yaml
@@ -7,6 +7,8 @@ networking:
 nodes:
   - role: control-plane
   - role: worker
+  - role: worker
+  - role: worker
     extraPortMappings:
       - containerPort: 30080
         hostPort: 30080
