--- a/roles/kind/files/kind-config.yaml
+++ b/roles/kind/files/kind-config.yaml
@@ -6,6 +6,9 @@ networking:
   podSubnet: 192.168.0.0/16
 nodes:
   - role: control-plane
+    extraMounts:
+    - containerPath: /var/lib/kubelet/config.json
+      hostPath: /home/tcolbert/.docker/config.json
     kubeadmConfigPatches:
     - |
       apiVersion: kubeadm.k8s.io/v1beta2
@@ -20,5 +23,14 @@ nodes:
     - containerPort: 443
       hostPort: 443
   - role: worker
+    extraMounts:
+    - containerPath: /var/lib/kubelet/config.json
+      hostPath: /home/tcolbert/.docker/config.json
   - role: worker
+    extraMounts:
+    - containerPath: /var/lib/kubelet/config.json
+      hostPath: /home/tcolbert/.docker/config.json
   - role: worker
+    extraMounts:
+    - containerPath: /var/lib/kubelet/config.json
+      hostPath: /home/tcolbert/.docker/config.json
