--- a/roles/kind/files/kind-config.yaml
+++ b/roles/kind/files/kind-config.yaml
@@ -4,24 +4,18 @@ apiVersion: kind.x-k8s.io/v1alpha4
 networking:
   disableDefaultCNI: true
   podSubnet: 192.168.0.0/16
+  # WARNING: It is _strongly_ recommended that you keep this the default
+  # (127.0.0.1) for security reasons. However it is possible to change this.
+  # apiServerAddress: "0.0.0.0"
+  # By default the API server listens on a random open port.
+  # You may choose a specific port but probably don't need to in most cases.
+  # Using a random port makes it easier to spin up multiple clusters.
+  apiServerPort: 6443
 nodes:
   - role: control-plane
     extraMounts:
     - containerPath: /var/lib/kubelet/config.json
       hostPath: /home/tcolbert/.docker/config.json
-    # kubeadmConfigPatches:
-    # - |
-    #   apiVersion: kubeadm.k8s.io/v1beta2
-    #   kind: InitConfiguration
-    #   nodeRegistration:
-    #     kubeletExtraArgs:
-    #       node-labels: "ingress-ready=true"
-    #       authorization-mode: "AlwaysAllow"
-    # extraPortMappings:
-    # - containerPort: 80
-    #   hostPort: 80
-    # - containerPort: 443
-    #   hostPort: 443
   - role: worker
     extraMounts:
     - containerPath: /var/lib/kubelet/config.json
