Update for adding traefik

--- a/roles/kind/tasks/main.yml
+++ b/roles/kind/tasks/main.yml
@@ -3,30 +3,27 @@
   include: kind.yml
   tags:
     - build
+    - minimum
 
 - name: configure network
   include: network.yml
   tags:
     - update
+    - minimum
     - network
 
-- name: configure consul
-  include: consul.yml
+- name: configure loadbalancer
+  include: metallb.yml
   tags:
     - update
-    - consul
+    - minimum
+    - loadbalancer
 
 - name: configure monitoring
   include: monitoring.yml
   tags:
     - update
     - monitoring
-
-- name: configure loadbalancer
-  include: metallb.yml
-  tags:
-    - update
-    - loadbalancer
 
 - name: Install Traefik
   include: traefik.yml
