--- a/roles/kind/files/kind-config.yaml
+++ b/roles/kind/files/kind-config.yaml
@@ -6,7 +6,7 @@ networking:
   podSubnet: 192.168.0.0/16
   # WARNING: It is _strongly_ recommended that you keep this the default
   # (127.0.0.1) for security reasons. However it is possible to change this.
-  # apiServerAddress: "0.0.0.0"
+  apiServerAddress: "0.0.0.0"
   # By default the API server listens on a random open port.
   # You may choose a specific port but probably don't need to in most cases.
   # Using a random port makes it easier to spin up multiple clusters.
