--- a/requirements.yml
+++ b/requirements.yml
@@ -2,3 +2,6 @@ collections:
   - name: community.kubernetes
     src: https://galaxy.ansible.com
     version: ">=1.0.0,<2.0.0"
+  - name: community.docker
+    src: https://galaxy.ansible.com
+    version: ">=1.0.0,<2.0.0"
