--- a/requirements.yml
+++ b/requirements.yml
@@ -5,3 +5,4 @@ collections:
   - name: community.docker
     src: https://galaxy.ansible.com
     version: ">=1.0.0,<2.0.0"
+  - name: ansible.netcommon
